--- a/P2/proyectos/calculosJS/estilos.css
+++ b/P2/proyectos/calculosJS/estilos.css
@@ -9,6 +9,7 @@ body{
     color: white;
     background-size: cover;
     height: 100vmax;
+    background-repeat: no-repeat;
     /*Se podra ver la imagen al 100*/
 }
 input[type=button]{
@@ -35,6 +36,9 @@ h1{
     font-size: 3vw;
     font-weight: normal;
     font-style: italic;
+    background-color: rgba(0, 0, 0, 0.37);
+    padding: 4vw;
+    border-bottom: 1px solid black;
 }
 input[type=number]{
     color: black;
@@ -66,4 +70,15 @@ form{
     text-align: center;
     color: white;
     font-size: 1.5vw;
+}
+#resultado{
+    color: rgb(255, 255, 255);
+    margin: 4vw;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 3vw;
+    font-weight: normal;
+    font-style: italic;
+    background-color: rgba(0, 0, 0, 0.37);
+    padding: 4vw;  
+    border-top: 1px solid black;
 }
